apps/doorward-commons/issuer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
  name: commons
  namespace: doorward-commons
  labels:
    app.kubernetes.io/name: ghost

spec:
  rules:
    - host: clients.doorward.org
      http:
        paths:
          - backend:
              serviceName: corteza-webapp
              servicePort: 80
            path: /

    - host: clients.doorward.org
      http:
        paths:
          - backend:
              serviceName: ghost-service
              servicePort: 80
            path: /blog

    - host: api.clients.doorward.org
      http:
        paths:
          - backend:
              serviceName: corteza-server
              servicePort: 80
            path: /

    - host: clients.doorward.org
      http:
        paths:
          - backend:
              serviceName: bookstack
              servicePort: 80
            path: /docs

  tls:
  - hosts:
    - api.clients.doorward.org
    - clients.doorward.org
    secretName: api.clients.doorward.org
